# mapgen

./: CLAUDE.md  Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/worldgen/: Cargo.toml
crates/worldgen/examples/: river_audit.rs
crates/worldgen/src/: audit.rs  config.rs  features.rs  generate.rs  lib.rs  metadata.rs  render.rs  river.rs  world.rs
crates/worldgen/src/generate/: biomes.rs  climate.rs  hydrology.rs  mod.rs  terrain.rs  util.rs
crates/worldgen/src/generate/hydrology/: conditioning.rs  erosion.rs  flow.rs  lakes.rs  mod.rs  ocean.rs  routing.rs  surfaces.rs
crates/worldgen/src/generate/terrain/: continents.rs  erosion.rs  mod.rs  tectonics.rs
crates/worldgen/src/render/: colors.rs  mod.rs  shading.rs  symbols.rs  water.rs
crates/worldgen/tests/: generation.rs
